# revgraph

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
config/: revgraph.example.yaml
examples/: load_and_query.py  quickstart.py
src/revgraph/: __init__.py  __main__.py
src/revgraph/agents/: base.py  registry.py  teams.py  tools.py
src/revgraph/agents/workflows/: firmware.py  nday_triage.py  patch_impact.py  summarize.py  yara.py
src/revgraph/analysis/: bbr.py  clustering.py  vulnerability.py
src/revgraph/cli/: agent.py  analyze.py  analyze_bin.py  app.py  embed.py  extract.py  llm_cmd.py  load.py  query.py  schema_cmd.py  serve.py
src/revgraph/config/: defaults.py  loader.py  models.py
src/revgraph/embeddings/: aggregator.py  generator.py  similarity.py  store.py  tasks.py
src/revgraph/extraction/: bcc_loader.py  binary_artifact.py  elf_loader.py  ghidra_runner.py  vex_lifter.py
src/revgraph/finetune/: dataset.py  serve.py  trainer.py
src/revgraph/graph/: connection.py  cross_binary.py  loader.py  queries.py  query_engine.py  schema.py
src/revgraph/llm/: client.py  exploit_analyzer.py  labeler.py  prompts.py  summarizer.py  vuln_reporter.py  yara_generator.py
src/revgraph/mcp/: blackfyre_server.py  embedding_server.py  neo4j_server.py
src/revgraph/nl2gql/: few_shot.py  refinement.py  schema_prompt.py  translator.py  validator.py
src/revgraph/utils/: formatters.py  logging.py  progress.py
tests/: conftest.py
tests/fixtures/: sample_queries.json
tests/integration/: test_graph_loader.py
tests/unit/: test_bbr.py  test_binary_artifact.py  test_cli.py  test_config.py  test_exploit_analyzer.py  test_extraction.py  test_few_shot.py  test_llm_client.py  test_prompts.py  test_similarity.py  test_tool_registry.py  test_validator.py
