[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "revgraph"
dynamic = ["version"]
description = "Reverse Engineering Graph Intelligence Toolkit — automate RE with Neo4j, LLMs, embeddings, and agentic workflows"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [{ name = "Shayaun Nejad" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Disassemblers",
]
dependencies = [
    "typer>=0.9,<1",
    "rich>=13",
    "pydantic>=2,<3",
    "pydantic-settings>=2,<3",
    "pyyaml>=6",
    "neo4j>=5.8,<6",
    "litellm>=1.30",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "mcp>=1.0",
    "structlog>=23",
    "jinja2>=3",
    "httpx>=0.25",
    "tenacity>=8",
]

[project.optional-dependencies]
blackfyre = ["blackfyre>=0.1"]
finetune = [
    "torch>=2",
    "transformers>=4.36",
    "datasets>=2.16",
    "peft>=0.7",
]
dev = [
    "pytest>=7",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4",
    "testcontainers[neo4j]>=3",
    "ruff>=0.2",
    "mypy>=1.8",
]

[project.scripts]
revgraph = "revgraph.cli.app:app"

[project.urls]
Homepage = "https://github.com/allsmog/revgraph"
Repository = "https://github.com/allsmog/revgraph"
Issues = "https://github.com/allsmog/revgraph/issues"

[tool.hatch.version]
path = "src/revgraph/version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/revgraph"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["integration: requires running Neo4j"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
